tests/error/inline_data_declaration.c
// fail "Data declaration cannot be marked 'inline'."

inline int i;

int main(){
    
}
